@@ -1,5 +1,17 @@
 2005-12-14  James Turner  <james@worldforge.org>
 
+	* Eris/Exceptions.h, Eris/Exceptions.cpp: add an alternate constructor for
+	  the InvalidAtlas exception, where no Object is present.
+	  
+	* Eris/Calendar.cpp, Eris/Calendar.h, Eris/Makefile.am: add a helper class
+	  to read the calendar data from the world entity, and hence convert the
+	  world time into a more useful value on the client. This is an initial
+	  attempt, expect radical changes based on feedback from users.
+
+	* Eris/Types.h: add more forward class declerations
+
+2005-12-14  James Turner  <james@worldforge.org>
+
 	* lots more sigc++ migration, everything inherits from trackable now,
 	  and mem_fun is preferred over object slots.
 
